<resources>
    <string name="app_name">나모</string>
    <string name="okay">확인</string>
    <string name="close">닫기</string>
    <string name="create">생성</string>
    <string name="apply">적용</string>
    <string name="copy_link">링크 복사</string>
    <string name="share_outside">외부 공유</string>
    <string name="schedule">일정</string>
    <string name="delete">삭제</string>
    <string name="name">이름</string>
    <string name="birth">생일</string>
    <string name="nickname">닉네임</string>
    <string name="input_hint">입력</string>
    <string name="changes_save">변경 내용 저장</string>
    <string name="toast_copy">클립보드에 복사되었습니다.</string>
    <string name="continuously">계속</string>
    <string name="for_service">서비스 이용을 위한</string>
    <string name="terms">약관 동의</string>
    <string name="term_location">(선택) 위치 서비스 동의</string>
    <string name="term_information">(필수) 개인정보 수집 및 이용</string>
    <string name="term_usage">(필수) 이용 약관</string>
    <string name="term_all_agree">전체 동의</string>
    <string name="term_notice">(선택) 앱 푸시 알림 수신 동의</string>
    <string name="onboarding_1_description">소중한 나의 일정과 기록,\n어떻게 관리하시나요?</string>
    <string name="onboarding_2_description">중요한 일정을 잊지 않도록\n캘린더에 표시</string>
    <string name="onboarding_3_description">일정을 사진과 글로 기록하고\n한 눈에 모아보세요</string>
    <string name="onboarding_4_description">그룹 캘린더에서 친구들 일정 확인 후\n손쉽게 모임 일정을 잡고</string>
    <string name="onboarding_5_description">사진 공유와 금액 정산까지 효율적으로</string>
    <string name="onboarding_5_namo_description">나의 모임 기록</string>
    <string name="onboarding_5_namo">나모</string>
    <string name="onboarding_5_start_description">지금 바로 시작하세요</string>
    <string name="onboarding_5_start">시작하기</string>
    <string name="onboarding_next">다음</string>
    <string name="onboarding_skip">skip</string>
    <string name="register_title">프로필 설정</string>
    <string name="register_nickname">닉네임 *</string>
    <string name="register_nickname_hint">닉네임 입력</string>
    <string name="register_nickname_rule">&#160;&#160;• 영어, 한글, 숫자 포함 12자 이내\n&#160;&#160;• 태그, 이모지 및 특수 문자 불가능</string>
    <string name="register_name">이름 *</string>
    <string name="register_birth">생년월일 *</string>
    <string name="register_birth_empty">YYYY/MM/DD</string>
    <string name="register_birth_divider">/</string>
    <string name="register_color_title">좋아하는 색상 *</string>
    <string name="register_color_dialog_title">좋아하는 색상</string>
    <string name="register_color_select">색상 선택</string>
    <string name="register_intro_title">한 줄 소개</string>
    <string name="register_intro_max">&#160;/ 50</string>
    <string name="register_intro_hint">내용 입력</string>
    <string name="register_required">* 표시는 필수 항목입니다.</string>
    <string name="nav_home">Home</string>
    <string name="nav_community">Community</string>
    <string name="nav_shop">Shop</string>
    <string name="nav_setting">Setting</string>
    <string name="group_calendar">Group Calendar</string>
    <string name="add_group_msg">그룹 리스트가 없습니다.\n그룹을 추가해 보세요!</string>
    <string name="network_group_msg">그룹 캘린더는 네트워크 연결 시 확인 가능합니다.\n네트워크 연결 후 다시 시도해주세요.</string>
    <string name="create_group">그룹 생성</string>
    <string name="input_group_code">그룹 코드 입력</string>
    <string name="dialog_close">닫기</string>
    <string name="dialog_done">저장</string>
    <string name="group_name_input">입력</string>
    <string name="new_group">새 그룹</string>
    <string name="group_name">그룹명</string>
    <string name="group_cover_image">커버 이미지</string>
    <string name="group_name_uneditable">추후 변경 불가</string>
    <string name="group_member">그룹원</string>
    <string name="group_code">그룹 코드</string>
    <string name="group_withdrawal">탈퇴하기</string>
    <string name="input_group_name">그룹명 입력</string>
    <string name="schedule_personal">개인 일정</string>
    <string name="schedule_personal_empty">등록된 개인 일정이 없습니다.</string>
    <string name="schedule_moim">모임 일정</string>
    <string name="schedule_moim_empty">등록된 모임 일정이 없습니다.</string>
    <string name="schedule_friend">친구 일정</string>
    <string name="schedule_empty">등록된 일정이 없습니다.</string>
    <string name="schedule_time">%s - %s</string>
    <string name="schedule_hint">내 일정</string>
    <string name="schedule_new">새 일정</string>
    <string name="schedule_edit">일정 편집</string>
    <string name="schedule_start">시작</string>
    <string name="schedule_end">종료</string>
    <string name="schedule_place">장소</string>
    <string name="schedule_do_record">기록하기</string>
    <string name="diary_storage">보관함</string>
    <string name="diary_filter">검색 필터</string>
    <string name="diary_filter_none">검색 필터 없음</string>
    <string name="diary_filter_search">검색</string>
    <string name="diary_filter_keyword_hint">키워드 입력</string>
    <string name="diary_filter_dialog_none">없음</string>
    <string name="diary_filter_dialog_title">일정 제목</string>
    <string name="diary_filter_dialog_content">기록 내용</string>
    <string name="diary_filter_dialog_participant">참석자</string>
    <string name="diary_participant_dialog_title">참석자 정보</string>
    <string name="diary_participant_dialog_total_num">총 인원</string>
    <string name="diary_participant_dialog_participant">참석자</string>
    <string name="diary_network_failure">모임 기록은 네트워크 연결 시 확인할 수 있습니다.\n네트워크 연결 후 다시 시도해 주세요.</string>
    <string name="diary_empty">기록이 없습니다.\n일정에 기록을 남겨보세요!</string>
    <string name="diary_modify">수정</string>
    <string name="diary_contents">나모의 새로운 시작</string>
    <string name="diary_date">날짜</string>
    <string name="diary_place">장소</string>
    <string name="diary_enjoy">재미도</string>
    <string name="diary_no_place">없음</string>
    <string name="diary_title">나몽몽</string>
    <string name="diary_detail_view">상세보기</string>
    <string name="diary_add">기록 저장</string>
    <string name="diary_edit">기록 수정</string>
    <string name="diary_input">내용 입력</string>
    <string name="diary_max_num">&#160;/ 200</string>
    <string name="diary_personal">개인</string>
    <string name="diary_group">모임</string>
    <string name="diary_attendee">참석자&#160;</string>
    <string name="diary_add_activity">활동 추가</string>
    <string name="diary_detail_click">모임 기록 보러가기</string>
    <string name="diary_calendar_personal">개인 기록</string>
    <string name="diary_calendar_moim">모임 기록</string>
    <string name="diary_calendar_personal_empty">작성된 개인 기록이 없습니다.</string>
    <string name="diary_calendar_moim_empty">작성된 모임 기록이 없습니다.</string>
    <string name="moim_diary_whole_money">전체 정산</string>
    <string name="moim_diary_none_activity">활동 없음</string>
    <string name="moim_diary_diary">일기장</string>
    <string name="moim_diary_start_date">시작</string>
    <string name="moim_diary_end_date">종료</string>
    <string name="moim_diary_new_activity">새 활동</string>
    <string name="moim_diary_none">없음</string>
    <string name="moim_payment">전체 정산</string>
    <string name="moim_payment_total">모든 활동 합계</string>
    <string name="moim_diary_confirm_delete_diary_title">일기를 삭제하시겠어요?</string>
    <string name="moim_diary_confirm_delete_diary_content">삭제한 일기는 내 기록에서 삭제됩니다.</string>
    <string name="moim_diary_confirm_delete_activity_title">활동을 삭제하시겠어요?</string>
    <string name="moim_diary_confirm_delete_activity_content">삭제한 모임 활동은\n모든 참석자의 기록에서 삭제됩니다.</string>
    <string name="moim_diary_confirm_back_title">편집한 내용이 저장되지 않습니다.</string>
    <string name="moim_diary_confirm_back_content">정말 나가시겠어요?</string>
    <string name="moim_diary_confirm_view_content">정말 조회 모드로 돌아가시겠어요?</string>
    <string name="activity_tag">활동 태그</string>
    <string name="activity_participants">활동 참석자</string>
    <string name="activity_payment">활동 정산</string>
    <string name="activity_payment_total_amount">총 금액</string>
    <string name="activity_payment_participant_count">인원 수</string>
    <string name="activity_payment_per_person">인당 금액</string>
    <string name="activity_payment_input">금액 입력</string>
    <string name="activity_payment_people_unit">&#160;명</string>
    <string name="activity_payment_unit">&#160;원</string>
    <string name="dialog_confirm">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_save">저장</string>
    <string name="month_calendar_header_year_month">yyyy년 MM월</string>
    <string name="month_calendar_header_today">31</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="home_daily_date">MM.dd (E)</string>
    <string name="dateFormat">yyyy.MM.dd (E)</string>
    <string name="timeFormat">hh:mm a</string>
    <string name="noticeFormat">yyyy.MM.dd (E) hh:mm a</string>
    <string name="setting">Setting</string>
    <string name="setting_profile_my">내 프로필</string>
    <string name="setting_version">버전 정보</string>
    <string name="setting_term">이용 약관</string>
    <string name="setting_individual_policy">개인정보 처리방침</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_withdrawal">회원탈퇴</string>
    <string name="dialog_setting_logout_title">정말 로그아웃 하시겠어요?</string>
    <string name="dialog_setting_quit_title">정말 계정을 삭제하시겠어요?</string>
    <string name="dialog_setting_quit_content">지금까지의 정보는\n3일 뒤 모두 사라집니다.</string>
    <string name="toast_setting_logout_success">로그아웃에 성공하셨습니다.</string>
    <string name="toast_setting_quit_success">회원탈퇴에 성공하셨습니다.</string>
    <string name="profile_edit_title">프로필 편집</string>
    <string name="profile_edit_public_announce">공개 설정 시, 친구가 보는 내 프로필에 정보가 표시됩니다.</string>
    <string name="profile_edit_public">공개</string>
    <string name="profile_edit_private">비공개</string>
    <string name="profile_edit_success">프로필 변경 내용이 저장되었습니다.</string>
    <string name="category">카테고리</string>
    <string name="category_edit">카테고리 편집</string>
    <string name="category_setting">카테고리 설정</string>
    <string name="category_calendar">캘린더</string>
    <string name="category_palette">팔레트</string>
    <string name="palette_normal">기본 팔레트</string>
    <string name="category_new">새 카테고리</string>
    <string name="category_add">새 카테고리 추가</string>
    <string name="category_delete">카테고리 삭제</string>
    <string name="category_hint">카테고리 이름</string>
    <string name="category_color">색상</string>
    <string name="category_detail_share">공개 설정</string>
    <string name="category_detail_share_guide">카테고리 일정이 친구에게 공개되지 않습니다.</string>
    <string name="category_detail_setting">카테고리 설정</string>
    <string name="dialog_category_delete_title">카테고리를 삭제하시겠어요?</string>
    <string name="dialog_category_delete_content">삭제하더라도 카테고리에\n포함된 일정은 삭제되지 않습니다.</string>
    <string name="more_view">더보기</string>
    <string name="map_search_hint">장소 입력</string>
    <string name="map_search">검색</string>
    <string name="moim_schedule_empty">모임 일정이 없습니다.\n친구와의 모임 약속을 잡아보세요!</string>
    <string name="moim_hide_previous">지난 모임 일정 숨기기</string>
    <string name="moim_schedule_new">새 모임 일정</string>
    <string name="moim_schedule_edit">모임 일정 편집</string>
    <string name="moim_schedule_title_hint">내 모임</string>
    <string name="moim_schedule_new_moim_start">새 모임 시작하기</string>
    <string name="moim_schedule_look_invite_friend_schedule">초대한 친구 일정 보기</string>
    <string name="moim_schedule_do_friend_invite">친구 초대하기</string>
    <string name="moim_schedule_invite_friend">초대할 친구</string>
    <string name="moim_schedule_invite_friend_reset">전체 선택 취소</string>
    <string name="moim_schedule_friend_invite_selected_num"><![CDATA[<font color=\'#DA6022\'>%d</font> / %d]]></string>
    <string name="moim_schedule_do_invite">초대하기</string>
    <string name="moim_schedule_invited_friend">초대된 친구</string>
    <string name="moim_schedule_invited_friend_not_yet">초대된 친구가 아직 없습니다.</string>
    <string name="moim_schedule_all_friend">모든 친구</string>
    <string name="moim_schedule_invite_friend_empty">아직 추가된 친구가 없어요.\n친구를 추가한 후 모임을 만들어보세요!</string>
</resources>